Migrate to MLKit custom model